--- a/client/package.json
+++ b/client/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0"
+  },
+  "dependencies": {
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0"
   }
 }
